# ovira-marketplace

./: .gitattributes  .gitignore  README.md
backend/ovira_marketplace/: README.md  license.txt  pyproject.toml
backend/ovira_marketplace/ovira_marketplace/: customers.py  hooks.py  modules.txt  permissions.py
backend/ovira_marketplace/ovira_marketplace/api/: addresses.py  admin.py  auth.py  catalog.py  checkout.py  cms.py  notifications.py  operator.py  orders.py  payment.py  products.py  reviews.py  settings.py  shipping.py  vendor.py
backend/ovira_marketplace/ovira_marketplace/marketplace/doctype/marketplace_banner/: marketplace_banner.json  marketplace_banner.py
backend/ovira_marketplace/ovira_marketplace/marketplace/doctype/marketplace_category/: marketplace_category.json  marketplace_category.py
backend/ovira_marketplace/ovira_marketplace/marketplace/doctype/marketplace_homepage_section/: marketplace_homepage_section.json  marketplace_homepage_section.py
backend/ovira_marketplace/ovira_marketplace/marketplace/doctype/marketplace_notification/: marketplace_notification.json  marketplace_notification.py
backend/ovira_marketplace/ovira_marketplace/marketplace_payments/connectors/: __init__.py  base.py  cod.py  paymob.py
backend/ovira_marketplace/ovira_marketplace/payments/connectors/: __init__.py  cod.py  paymob.py
backend/ovira_marketplace/ovira_marketplace/setup/: accounting.py  cms.py  demo.py  install.py  workspace.py
backend/ovira_marketplace/ovira_marketplace/shipping/connectors/: __init__.py  aramex.py  base.py  bosta.py  manual.py
(+132 files in other folders)
