[project]
name = "ovira_marketplace"
authors = [
    { name = "Ovira", email = "gamalabaualsaad29@gmail.com" },
]
description = "Multi-vendor marketplace for ERPNext, with single-company mode."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # runtime deps live in the bench; provider SDKs are added per connector
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
